restyled and completed challenge

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 
 
 
-      <div class="row">
-        <div class="col-lg-6  col-md-12  left-column">
+      <div class="row ">
+        <div class="col-lg-6 left-column ">
           <h1> Come to meet a new awesome and interesting dogs now!!</h1>
 
           <button type="button" class="btn btn-dark my-btn btn-lg "> <i class="fa-brands fa-apple"></i> Download</button>
@@ -83,7 +83,7 @@
 
         </div>
 
-        <div class="col-lg-6 col-md-12 left-column">
+        <div class="col-lg-6  right-column">
 
           <img id="title-image" src="resources/images/iphone6.png" alt="iphone6-image">
 
@@ -92,6 +92,18 @@
 
     </div>
 
+  </section>
+
+  <section id="section-two">
+    <div class="container-fluid">
+
+      <div class="row">
+        <div class="col-lg-4 col-md-12 info-section " ><i class="fa-solid fa-circle-check info-icon"></i>  <div class="info-title" >Easy to use</div> <div class="info-subtitle">So easy to use , even your dog could do it.</div>   </div>
+        <div class="col-lg-4 col-md-12 info-section " ><i class="fa-solid fa-bullseye info-icon"></i>  <div class="info-title" >Elite clientele</div> <div class="info-subtitle">we have all the dogs, the gratest dogs.</div>  </div>
+        <div class="col-lg-4 col-md-12 info-section " ><i class="fa-solid fa-heart info-icon"></i>  <div class="info-title" >Garanteed to work</div> <div class="info-subtitle">Find the love of your dog's life or your money  back!</div>  </div>
+      </div>
+
+    </div>
   </section>
 
 </body>
