--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width initial-scale=1.0">
+
 
 
   <script src="https://kit.fontawesome.com/e84b1a420e.js" crossorigin="anonymous"></script>
@@ -31,7 +33,6 @@
 </head>
 
 <body >
-<!-- ciao -->
 
   <section id="title" >
 
@@ -97,12 +98,61 @@
     <div class="container-fluid">
 
       <div class="row">
-        <div class="col-lg-4 col-md-12 info-section " ><i class="fa-solid fa-circle-check info-icon"></i>  <div class="info-title" >Easy to use</div> <div class="info-subtitle">So easy to use , even your dog could do it.</div>   </div>
-        <div class="col-lg-4 col-md-12 info-section " ><i class="fa-solid fa-bullseye info-icon"></i>  <div class="info-title" >Elite clientele</div> <div class="info-subtitle">we have all the dogs, the gratest dogs.</div>  </div>
-        <div class="col-lg-4 col-md-12 info-section " ><i class="fa-solid fa-heart info-icon"></i>  <div class="info-title" >Garanteed to work</div> <div class="info-subtitle">Find the love of your dog's life or your money  back!</div>  </div>
+        <div class="col-lg-4 col-md-12 info-section " ><i class="fa-solid fa-circle-check info-icon fa-6x"></i>  <div class="info-title" >Easy to use</div> <div class="info-subtitle">So easy to use , even your dog could do it.</div>   </div>
+        <div class="col-lg-4 col-md-12 info-section " ><i class="fa-solid fa-bullseye info-icon fa-6x"></i>  <div class="info-title" >Elite clientele</div> <div class="info-subtitle">we have all the dogs, the gratest dogs.</div>  </div>
+        <div class="col-lg-4 col-md-12 info-section " ><i class="fa-solid fa-heart info-icon fa-6x"></i>  <div class="info-title" >Garanteed to work</div> <div class="info-subtitle">Find the love of your dog's life or your money  back!</div>  </div>
       </div>
 
     </div>
+  </section>
+
+
+  <section id="testimonials" >
+
+
+    <div id="testimonial-carousel" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <h2> I no longer have to sniff other dogs for love. I've found the hottest Corgi on Tindog. woof!</h2>
+          <img class="testimonial-image" src="resources/images/dog-img.jpg" alt="dog-image">
+          <em>Pebbles, New York</em>
+        </div>
+        <div class="carousel-item">
+          <h2> My dog used to be so lonly, but with tindog's help, they've found the love of their life. I think.</h2>
+          <img class="testimonial-image" src="resources/images/lady-img.jpg" alt="lady-image">
+          <em>Beverly, Illinois</em>
+        </div>
+
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#testimonial-carousel" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#testimonial-carousel" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+
+
+
+
+
+
+
+  </section>
+
+
+
+  <section id="press">
+    <img class="press-logo" src="resources/images/TechCrunch.png" alt="">
+    <img class="press-logo" src="resources/images/tnw.png" alt="">
+    <img class="press-logo" src="resources/images/bizinsider.png" alt="">
+    <img class="press-logo" src="resources/images/mashable.png" alt="">
+
+  
+
+
   </section>
 
 </body>
